Bug 1430508 - Return 0 for ProcessId() when channel IPC is closed. r=dragana, a=jcristau

There are some corner cases where we try to attach StreamFilter endpoints to a
channel after its IPC has been closed from from the other side, but request
listeners haven't been notified. This causes crashes in any of several places.

This patch changes nsHttpChannel::ProcessId to return 0 when IPC is closed, so
callers can detect that it's no longer possible to attach endpoints to it.

MozReview-Commit-ID: BZTOqezih0P

--HG--
extra : source : 06f766e7640a3cd180f7da7c092823e500a3d674